@startuml
title UML Diagram - MerchProductService and Product Types

' ----- Product hierarchy -----
abstract class MerchProduct {
  - id: Long
  - name: String
  - price: Double
  - description: String
}

class MangaBook {
  - author: String
  - volumeNumber: int
  - publisher: String
}

class Figure {
  - brand: String
  - character: String
  - scale: String
}

class Apparel {
  - size: String
  - color: String
  - type: String
}

MerchProduct <|-- MangaBook
MerchProduct <|-- Figure
MerchProduct <|-- Apparel

' ----- Service -----
interface MerchProductService {
    + findAll(): List<MerchProductResponseDTO>
    + findById(id: Long): MerchProductResponseDTO
    + create(request: MerchProductRequestDTO): MerchProductResponseDTO
    + update(id: Long, update: MerchProductUpdateDTO): MerchProductResponseDTO
    + delete(id: Long): void

    ' MangaBook specific
    + findAllMangaBooks(): List<MangaBookResponseDTO>
    + findMangaBookById(id: Long): MangaBookResponseDTO
    + createMangaBook(request: MangaBookRequestDTO): MangaBookResponseDTO
    + updateMangaBook(id: Long, update: MangaBookUpdateDTO): MangaBookResponseDTO
    + deleteMangaBook(id: Long): void

    ' Figure specific
    + findAllFigures(): List<FigureResponseDTO>
    + findFigureById(id: Long): FigureResponseDTO
    + createFigure(request: FigureRequestDTO): FigureResponseDTO
    + updateFigure(id: Long, update: FigureUpdateDTO): FigureResponseDTO
    + deleteFigure(id: Long): void

    ' Apparel specific
    + findAllApparels(): List<ApparelResponseDTO>
    + findApparelById(id: Long): ApparelResponseDTO
    + createApparel(request: ApparelRequestDTO): ApparelResponseDTO
    + updateApparel(id: Long, update: ApparelUpdateDTO): ApparelResponseDTO
    + deleteApparel(id: Long): void
}

' ----- Implementation -----
class MerchProductServiceImpl {
    - merchProductRepository
    - mangaBookRepository
    - figureRepository
    - apparelRepository
    + implement all methods of MerchProductService
}

MerchProductService <|.. MerchProductServiceImpl

@enduml
